src/cbor/libqcborvalue.h

typedef struct QCborArray QCborArray;
typedef struct QCborMap QCborMap;
typedef struct QCborStreamWriter QCborStreamWriter;
typedef struct QCborValue QCborValue;
typedef struct QCborValueConstRef QCborValueConstRef;
typedef struct QDateTime QDateTime;
typedef struct QJsonValue QJsonValue;
typedef struct QRegularExpression QRegularExpression;
typedef struct QUrl QUrl;
typedef struct QUuid QUuid;
typedef struct QVariant QVariant;
QCborValueConstRef* QCborValueConstRef_new(QCborValueConstRef* other);
QCborValueConstRef* QCborValueConstRef_new2(QCborValueConstRef* param1);
QCborValue* QCborValueConstRef_ToQCborValue(const QCborValueConstRef* self);
int QCborValueConstRef_Type(const QCborValueConstRef* self);
bool QCborValueConstRef_IsInteger(const QCborValueConstRef* self);
bool QCborValueConstRef_IsByteArray(const QCborValueConstRef* self);
bool QCborValueConstRef_IsString(const QCborValueConstRef* self);
bool QCborValueConstRef_IsArray(const QCborValueConstRef* self);
bool QCborValueConstRef_IsMap(const QCborValueConstRef* self);
bool QCborValueConstRef_IsTag(const QCborValueConstRef* self);
bool QCborValueConstRef_IsFalse(const QCborValueConstRef* self);
bool QCborValueConstRef_IsTrue(const QCborValueConstRef* self);
bool QCborValueConstRef_IsBool(const QCborValueConstRef* self);
bool QCborValueConstRef_IsNull(const QCborValueConstRef* self);
bool QCborValueConstRef_IsUndefined(const QCborValueConstRef* self);
bool QCborValueConstRef_IsDouble(const QCborValueConstRef* self);
bool QCborValueConstRef_IsDateTime(const QCborValueConstRef* self);
bool QCborValueConstRef_IsUrl(const QCborValueConstRef* self);
bool QCborValueConstRef_IsRegularExpression(const QCborValueConstRef* self);
bool QCborValueConstRef_IsUuid(const QCborValueConstRef* self);
bool QCborValueConstRef_IsInvalid(const QCborValueConstRef* self);
bool QCborValueConstRef_IsContainer(const QCborValueConstRef* self);
bool QCborValueConstRef_IsSimpleType(const QCborValueConstRef* self);
bool QCborValueConstRef_IsSimpleTypeWithSt(const QCborValueConstRef* self, uint8_t st);
uint8_t QCborValueConstRef_ToSimpleType(const QCborValueConstRef* self);
uint64_t QCborValueConstRef_Tag(const QCborValueConstRef* self);
QCborValue* QCborValueConstRef_TaggedValue(const QCborValueConstRef* self);
long long QCborValueConstRef_ToInteger(const QCborValueConstRef* self);
bool QCborValueConstRef_ToBool(const QCborValueConstRef* self);
double QCborValueConstRef_ToDouble(const QCborValueConstRef* self);
libqt_string QCborValueConstRef_ToByteArray(const QCborValueConstRef* self);
libqt_string QCborValueConstRef_ToString(const QCborValueConstRef* self);
QDateTime* QCborValueConstRef_ToDateTime(const QCborValueConstRef* self);
QUrl* QCborValueConstRef_ToUrl(const QCborValueConstRef* self);
QRegularExpression* QCborValueConstRef_ToRegularExpression(const QCborValueConstRef* self);
QUuid* QCborValueConstRef_ToUuid(const QCborValueConstRef* self);
QCborArray* QCborValueConstRef_ToArray(const QCborValueConstRef* self);
QCborArray* QCborValueConstRef_ToArrayWithQCborArray(const QCborValueConstRef* self, QCborArray* a);
QCborMap* QCborValueConstRef_ToMap(const QCborValueConstRef* self);
QCborMap* QCborValueConstRef_ToMapWithQCborMap(const QCborValueConstRef* self, QCborMap* m);
QCborValue* QCborValueConstRef_OperatorSubscript(const QCborValueConstRef* self, libqt_string key);
QCborValue* QCborValueConstRef_OperatorSubscript2(const QCborValueConstRef* self, long long key);
int QCborValueConstRef_Compare(const QCborValueConstRef* self, QCborValue* other);
bool QCborValueConstRef_OperatorEqual(const QCborValueConstRef* self, QCborValue* other);
bool QCborValueConstRef_OperatorNotEqual(const QCborValueConstRef* self, QCborValue* other);
bool QCborValueConstRef_OperatorLesser(const QCborValueConstRef* self, QCborValue* other);
QVariant* QCborValueConstRef_ToVariant(const QCborValueConstRef* self);
QJsonValue* QCborValueConstRef_ToJsonValue(const QCborValueConstRef* self);
libqt_string QCborValueConstRef_ToCbor(const QCborValueConstRef* self);
void QCborValueConstRef_ToCborWithWriter(const QCborValueConstRef* self, QCborStreamWriter* writer);
libqt_string QCborValueConstRef_ToDiagnosticNotation(const QCborValueConstRef* self);
uint8_t QCborValueConstRef_ToSimpleType1(const QCborValueConstRef* self, uint8_t defaultValue);
uint64_t QCborValueConstRef_Tag1(const QCborValueConstRef* self, uint64_t defaultValue);
QCborValue* QCborValueConstRef_TaggedValue1(const QCborValueConstRef* self, QCborValue* defaultValue);
long long QCborValueConstRef_ToInteger1(const QCborValueConstRef* self, long long defaultValue);
bool QCborValueConstRef_ToBool1(const QCborValueConstRef* self, bool defaultValue);
double QCborValueConstRef_ToDouble1(const QCborValueConstRef* self, double defaultValue);
libqt_string QCborValueConstRef_ToByteArray1(const QCborValueConstRef* self, libqt_string defaultValue);
libqt_string QCborValueConstRef_ToString1(const QCborValueConstRef* self, libqt_string defaultValue);
QDateTime* QCborValueConstRef_ToDateTime1(const QCborValueConstRef* self, QDateTime* defaultValue);
QUrl* QCborValueConstRef_ToUrl1(const QCborValueConstRef* self, QUrl* defaultValue);
QRegularExpression* QCborValueConstRef_ToRegularExpression1(const QCborValueConstRef* self, QRegularExpression* defaultValue);
QUuid* QCborValueConstRef_ToUuid1(const QCborValueConstRef* self, QUuid* defaultValue);
libqt_string QCborValueConstRef_ToCbor1(const QCborValueConstRef* self, int opt);
void QCborValueConstRef_ToCbor2(const QCborValueConstRef* self, QCborStreamWriter* writer, int opt);
libqt_string QCborValueConstRef_ToDiagnosticNotation1(const QCborValueConstRef* self, int opt);