src/qt/cbor/libqcborvalue.bf

public struct QCborValueConstRef
{
	[LinkName("QCborValueConstRef_new")]
	public static extern QCborValueConstRef* QCborValueConstRef_new(QCborValueConstRef* other);
	[LinkName("QCborValueConstRef_new2")]
	public static extern QCborValueConstRef* QCborValueConstRef_new2(QCborValueConstRef* param1);
	[LinkName("QCborValueConstRef_ToQCborValue")]
	public static extern QCborValue QCborValueConstRef_ToQCborValue(Self* c_this);
	[LinkName("QCborValueConstRef_Type")]
	public static extern int64 QCborValueConstRef_Type(Self* c_this);
	[LinkName("QCborValueConstRef_IsInteger")]
	public static extern bool QCborValueConstRef_IsInteger(Self* c_this);
	[LinkName("QCborValueConstRef_IsByteArray")]
	public static extern bool QCborValueConstRef_IsByteArray(Self* c_this);
	[LinkName("QCborValueConstRef_IsString")]
	public static extern bool QCborValueConstRef_IsString(Self* c_this);
	[LinkName("QCborValueConstRef_IsArray")]
	public static extern bool QCborValueConstRef_IsArray(Self* c_this);
	[LinkName("QCborValueConstRef_IsMap")]
	public static extern bool QCborValueConstRef_IsMap(Self* c_this);
	[LinkName("QCborValueConstRef_IsTag")]
	public static extern bool QCborValueConstRef_IsTag(Self* c_this);
	[LinkName("QCborValueConstRef_IsFalse")]
	public static extern bool QCborValueConstRef_IsFalse(Self* c_this);
	[LinkName("QCborValueConstRef_IsTrue")]
	public static extern bool QCborValueConstRef_IsTrue(Self* c_this);
	[LinkName("QCborValueConstRef_IsBool")]
	public static extern bool QCborValueConstRef_IsBool(Self* c_this);
	[LinkName("QCborValueConstRef_IsNull")]
	public static extern bool QCborValueConstRef_IsNull(Self* c_this);
	[LinkName("QCborValueConstRef_IsUndefined")]
	public static extern bool QCborValueConstRef_IsUndefined(Self* c_this);
	[LinkName("QCborValueConstRef_IsDouble")]
	public static extern bool QCborValueConstRef_IsDouble(Self* c_this);
	[LinkName("QCborValueConstRef_IsDateTime")]
	public static extern bool QCborValueConstRef_IsDateTime(Self* c_this);
	[LinkName("QCborValueConstRef_IsUrl")]
	public static extern bool QCborValueConstRef_IsUrl(Self* c_this);
	[LinkName("QCborValueConstRef_IsRegularExpression")]
	public static extern bool QCborValueConstRef_IsRegularExpression(Self* c_this);
	[LinkName("QCborValueConstRef_IsUuid")]
	public static extern bool QCborValueConstRef_IsUuid(Self* c_this);
	[LinkName("QCborValueConstRef_IsInvalid")]
	public static extern bool QCborValueConstRef_IsInvalid(Self* c_this);
	[LinkName("QCborValueConstRef_IsContainer")]
	public static extern bool QCborValueConstRef_IsContainer(Self* c_this);
	[LinkName("QCborValueConstRef_IsSimpleType")]
	public static extern bool QCborValueConstRef_IsSimpleType(Self* c_this);
	[LinkName("QCborValueConstRef_IsSimpleTypeWithSt")]
	public static extern bool QCborValueConstRef_IsSimpleTypeWithSt(Self* c_this, void st);
	[LinkName("QCborValueConstRef_ToSimpleType")]
	public static extern void QCborValueConstRef_ToSimpleType(Self* c_this);
	[LinkName("QCborValueConstRef_Tag")]
	public static extern void QCborValueConstRef_Tag(Self* c_this);
	[LinkName("QCborValueConstRef_TaggedValue")]
	public static extern QCborValue QCborValueConstRef_TaggedValue(Self* c_this);
	[LinkName("QCborValueConstRef_ToInteger")]
	public static extern int64 QCborValueConstRef_ToInteger(Self* c_this);
	[LinkName("QCborValueConstRef_ToBool")]
	public static extern bool QCborValueConstRef_ToBool(Self* c_this);
	[LinkName("QCborValueConstRef_ToDouble")]
	public static extern double QCborValueConstRef_ToDouble(Self* c_this);
	[LinkName("QCborValueConstRef_ToByteArray")]
	public static extern libqt_string QCborValueConstRef_ToByteArray(Self* c_this);
	[LinkName("QCborValueConstRef_ToString")]
	public static extern libqt_string QCborValueConstRef_ToString(Self* c_this);
	[LinkName("QCborValueConstRef_ToDateTime")]
	public static extern QDateTime QCborValueConstRef_ToDateTime(Self* c_this);
	[LinkName("QCborValueConstRef_ToUrl")]
	public static extern QUrl QCborValueConstRef_ToUrl(Self* c_this);
	[LinkName("QCborValueConstRef_ToRegularExpression")]
	public static extern QRegularExpression QCborValueConstRef_ToRegularExpression(Self* c_this);
	[LinkName("QCborValueConstRef_ToUuid")]
	public static extern QUuid QCborValueConstRef_ToUuid(Self* c_this);
	[LinkName("QCborValueConstRef_ToArray")]
	public static extern QCborArray QCborValueConstRef_ToArray(Self* c_this);
	[LinkName("QCborValueConstRef_ToArrayWithQCborArray")]
	public static extern QCborArray QCborValueConstRef_ToArrayWithQCborArray(Self* c_this, QCborArray* a);
	[LinkName("QCborValueConstRef_ToMap")]
	public static extern QCborMap QCborValueConstRef_ToMap(Self* c_this);
	[LinkName("QCborValueConstRef_ToMapWithQCborMap")]
	public static extern QCborMap QCborValueConstRef_ToMapWithQCborMap(Self* c_this, QCborMap* m);
	[LinkName("QCborValueConstRef_OperatorSubscript")]
	public static extern QCborValue QCborValueConstRef_OperatorSubscript(Self* c_this, libqt_string key);
	[LinkName("QCborValueConstRef_OperatorSubscript2")]
	public static extern QCborValue QCborValueConstRef_OperatorSubscript2(Self* c_this, int64 key);
	[LinkName("QCborValueConstRef_Compare")]
	public static extern int32 QCborValueConstRef_Compare(Self* c_this, QCborValue* other);
	[LinkName("QCborValueConstRef_OperatorEqual")]
	public static extern bool QCborValueConstRef_OperatorEqual(Self* c_this, QCborValue* other);
	[LinkName("QCborValueConstRef_OperatorNotEqual")]
	public static extern bool QCborValueConstRef_OperatorNotEqual(Self* c_this, QCborValue* other);
	[LinkName("QCborValueConstRef_OperatorLesser")]
	public static extern bool QCborValueConstRef_OperatorLesser(Self* c_this, QCborValue* other);
	[LinkName("QCborValueConstRef_ToVariant")]
	public static extern QVariant QCborValueConstRef_ToVariant(Self* c_this);
	[LinkName("QCborValueConstRef_ToJsonValue")]
	public static extern QJsonValue QCborValueConstRef_ToJsonValue(Self* c_this);
	[LinkName("QCborValueConstRef_ToCbor")]
	public static extern libqt_string QCborValueConstRef_ToCbor(Self* c_this);
	[LinkName("QCborValueConstRef_ToCborWithWriter")]
	public static extern void QCborValueConstRef_ToCborWithWriter(Self* c_this, QCborStreamWriter* writer);
	[LinkName("QCborValueConstRef_ToDiagnosticNotation")]
	public static extern libqt_string QCborValueConstRef_ToDiagnosticNotation(Self* c_this);
	[LinkName("QCborValueConstRef_ToSimpleType1")]
	public static extern void QCborValueConstRef_ToSimpleType1(Self* c_this, void defaultValue);
	[LinkName("QCborValueConstRef_Tag1")]
	public static extern void QCborValueConstRef_Tag1(Self* c_this, void defaultValue);
	[LinkName("QCborValueConstRef_TaggedValue1")]
	public static extern QCborValue QCborValueConstRef_TaggedValue1(Self* c_this, QCborValue* defaultValue);
	[LinkName("QCborValueConstRef_ToInteger1")]
	public static extern int64 QCborValueConstRef_ToInteger1(Self* c_this, int64 defaultValue);
	[LinkName("QCborValueConstRef_ToBool1")]
	public static extern bool QCborValueConstRef_ToBool1(Self* c_this, bool defaultValue);
	[LinkName("QCborValueConstRef_ToDouble1")]
	public static extern double QCborValueConstRef_ToDouble1(Self* c_this, double defaultValue);
	[LinkName("QCborValueConstRef_ToByteArray1")]
	public static extern libqt_string QCborValueConstRef_ToByteArray1(Self* c_this, libqt_string defaultValue);
	[LinkName("QCborValueConstRef_ToString1")]
	public static extern libqt_string QCborValueConstRef_ToString1(Self* c_this, libqt_string defaultValue);
	[LinkName("QCborValueConstRef_ToDateTime1")]
	public static extern QDateTime QCborValueConstRef_ToDateTime1(Self* c_this, QDateTime* defaultValue);
	[LinkName("QCborValueConstRef_ToUrl1")]
	public static extern QUrl QCborValueConstRef_ToUrl1(Self* c_this, QUrl* defaultValue);
	[LinkName("QCborValueConstRef_ToRegularExpression1")]
	public static extern QRegularExpression QCborValueConstRef_ToRegularExpression1(Self* c_this, QRegularExpression* defaultValue);
	[LinkName("QCborValueConstRef_ToUuid1")]
	public static extern QUuid QCborValueConstRef_ToUuid1(Self* c_this, QUuid* defaultValue);
	[LinkName("QCborValueConstRef_ToCbor1")]
	public static extern libqt_string QCborValueConstRef_ToCbor1(Self* c_this, int64 opt);
	[LinkName("QCborValueConstRef_ToCbor2")]
	public static extern void QCborValueConstRef_ToCbor2(Self* c_this, QCborStreamWriter* writer, int64 opt);
	[LinkName("QCborValueConstRef_ToDiagnosticNotation1")]
	public static extern libqt_string QCborValueConstRef_ToDiagnosticNotation1(Self* c_this, int64 opt);
}
